syntax = "proto3";

package target;

option go_package = "server.v1;server";

service TargetService {
  rpc Auth(AuthRequest) returns (AuthResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc Order(OrderRequest) returns (OrderResponse);
  rpc Stats(StatsRequest) returns (StatsResponse);
  rpc Reset(ResetRequest) returns (ResetResponse);
}

message AuthRequest {
  string login = 1;
  string pass = 2;
}

message AuthResponse {
  int64 user_id = 1;
  string token = 2;
}

message ListRequest {
  string token = 1;
  int64 user_id = 2;
}

message ListResponse {
  repeated ListItem result = 1;
}

message ListItem {
  int64 item_id = 1;
}

message OrderRequest {
  string token = 1;
  int64 user_id = 2;
  int64 item_id = 3;
}

message OrderResponse {
  int64 order_id = 1;
}

message StatsRequest {}

message StatsResponse {
  StatisticBodyResponse Auth = 1;
  StatisticBodyResponse List = 2;
  StatisticBodyResponse Order = 3;
}

message StatisticBodyResponse  {
  map<int64, uint64> Code200 = 1;
  uint64 Code400 = 2;
  uint64 Code500 = 3;
}

message ResetRequest {}

message ResetResponse {
  StatisticBodyResponse Auth = 1;
  StatisticBodyResponse List = 2;
  StatisticBodyResponse Order = 3;
}

